@@ -40,7 +40,7 @@ class TestGemGemcutterUtilities < RubyGemTestCase
 
   def test_sign_in_skips_with_existing_credentials
     api_key     = 'a5fdbb6ba150cbb83aad2bb2fede64cf040453903'
-    Gem.configuration.api_key = api_key
+    Gem.configuration.rubygems_api_key = api_key
 
     util_sign_in [api_key, 200, 'OK']
 
